--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,5 @@ jobs:
       - name: Run Test
         run: /home/runner/work/tech-C-task2/tech-C-task2/build/test_program --gtest_filter=* --gtest_color=no
       - name: Run codecov
-        uses: codecov/codecov-action@v1
-        with :
-          token : ${{secrets.CODECOV_TOKEN}}
+        run: bash <(curl -s https://codecov.io/bash) -t ${{secrets.CODECOV_TOKEN}}
         
