--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,7 +29,7 @@ jobs:
         with:
                   source: '.'
                   exclude: './third_party ./external'
-                  extensions: 'h,cpp'
+                  extensions: 'h,c'
                   clangFormatVersion: 11
                   style: chromium
       - name: configure
