--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,13 @@ project(tech_c)
 
 set(CMAKE_C_STANDARD 11)
 
-#set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
-#set(THREADS_PREFER_PTHREAD_FLAG TRUE)
+set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
+set(THREADS_PREFER_PTHREAD_FLAG TRUE)
+
 find_package(Threads REQUIRED)
 set(CMAKE_CXX_FLAGS "-Wall -Werror -Wpedantic -fpermissive")
+
+
 include(ExternalProject)
 ExternalProject_Add(gtest
         URL https://github.com/google/googletest/archive/release-1.10.0.zip
@@ -19,24 +22,21 @@ enable_testing()
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIR})
 
-add_executable(tech_c src/c/main.c src/c/task2/input_data.c src/c/task2/input_data.h src/c/task2/multi_thread/thread_data.c src/c/task2/multi_thread/thread_data.h src/c/task2/one_thread/one_thread.c src/c/task2/one_thread/one_thread.h src/c/task2/lib/func_prototype.h src/c/task2/test_func/test_func.c src/c/task2/test_func/test_func.h src/c/task2/lib/main_struct.h)
+add_library(${PROJECT_NAME}_lib STATIC src/c/task2/lib/start_task.h src/c/task2/lib/main_struct.h src/c/task2/lib/one_thread/start_task.c)
+add_library(${PROJECT_NAME}_dynamic_lib SHARED src/c/task2/lib/start_task.h src/c/task2/lib/main_struct.h src/c/task2/lib/multi_thread/start_task.c)
 
 
-add_executable(test_program src/test/test.cpp)
+add_executable(stress_test_static src/test/stress_test_static.cpp)
+add_executable(stress_test_dynamic src/test/stress_test_dynamic.cpp)
 
-add_library(${PROJECT_NAME}_lib STATIC src/c/task2/one_thread/one_thread.h src/c/task2/one_thread/one_thread.c)
-add_library(${PROJECT_NAME}_dynamic_lib SHARED src/c/task2/multi_thread/thread_data.h src/c/task2/multi_thread/thread_data.c)
 
-add_executable(stress_test src/test/stress_test.cpp)
+target_link_libraries(stress_test_static PRIVATE ${PROJECT_NAME}_lib GTest::GTest GTest::Main)
+target_link_libraries(stress_test_dynamic PRIVATE ${PROJECT_NAME}_dynamic_lib GTest::GTest GTest::Main)
 
-add_test(test_program test_program)
+add_test(stress_test_static stress_test_static)
+add_test(stress_test_dynamic stress_test_dynamic)
 
-add_test(stress_test stress_test)
 
-target_link_libraries(tech_c Threads::Threads)
-target_link_libraries(test_program GTest::GTest GTest::Main)
-
-target_link_libraries(stress_test  ${PROJECT_NAME}_lib ${PROJECT_NAME}_dynamic_lib GTest::GTest GTest::Main)
 
 
 
